--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
   <head>
     <title>{{ title }}</title>
     <meta charset="UTF-8">
+
+    <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet"> 
+    <link href="style.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
