Added a bit of explanitory text

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,14 @@
 
   <body>
     <h1>Martha's Vineyard Polar Bears Data Visualization</h1> 
+
+    <p>
+      For the past several years, the wonderful MV Polar Bears group has
+      recorded how many people attend each day. This site provides some basic
+      visualizations of this dataset. The site is refreshed daily to include
+      the latest, greatest data. Enjoy! 
+    </p>
+
     {{ daily_bar_div | safe }}
     {{ weekly_bar_div | safe }}
 
