Added table of (some) recent data

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,26 @@
       the latest, greatest data. Enjoy! 
     </p>
 
+    <div id="recent-data">
+      <table>
+          <tr id="recent-data-first-line">
+            {% for day_table in daily_table %}
+            <th> {{ day_table["DAY-OF-WEEK"] }} {{ day_table.MONTH }}/{{ day_table.DAY }}/{{ day_table.YEAR }} </th> 
+            {% endfor %}
+          </tr>
+          <tr>
+            {% for day_table in daily_table %}
+            <td> <em>Group:</em> {{ day_table["GROUP"] }} </td>
+            {% endfor %}
+          </tr>
+          <tr>
+            {% for day_table in daily_table %}
+            <td> <em>Newbies:</em> {{ day_table["NEWBIES"] }} </td>
+            {% endfor %}
+          </tr>
+      </table>
+    </div>
+
     {{ daily_bar_div | safe }}
     {{ weekly_bar_div | safe }}
 
@@ -29,6 +49,13 @@
     <script src="https://cdn.pydata.org/bokeh/release/bokeh-0.12.15.min.js"></script>
     <script src="https://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.15.min.js"></script>
     <script src="https://cdn.pydata.org/bokeh/release/bokeh-tables-0.12.15.min.js"></script>
+
+	<script>
+		window.onload = function () {
+		  var recent_data_div = document.getElementById("recent-data");
+		  recent_data_div.scrollLeft = recent_data_div.scrollWidth;
+		}
+    </script>
 
     {{ daily_bar_script | safe }}
     {{ weekly_bar_script | safe }}
