Fixed site.py, now works to generate the website

--- a/mv_polar_bears/templates/index.html
+++ b/mv_polar_bears/templates/index.html
@@ -23,7 +23,7 @@
       <table>
           <tr id="recent-data-first-line">
             {% for day_table in daily_table %}
-            <th> {{ day_table["DAY-OF-WEEK"] }} {{ day_table.MONTH }}/{{ day_table.DAY }}/{{ day_table.YEAR }} </th> 
+            <th> {{ day_table["DAY-OF-WEEK"] }} {{ day_table.DATE }} </th> 
             {% endfor %}
           </tr>
           <tr>
