Added last updated line

--- a/mv_polar_bears/templates/index.html
+++ b/mv_polar_bears/templates/index.html
@@ -18,6 +18,9 @@
       visualizations of this dataset. The site is refreshed daily to include
       the latest, greatest data. Enjoy! 
     </p>
+    <p>
+      Last Update: {{ last_update }}
+    </p>
 
     <div id="recent-data">
       <table>
