table and plots completed

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,10 @@
 
     {{ cumul_div | safe }}
 
+    <div id="last-update">
+      Last Updated: {{ last_update }}
+    </div>
+
     <script src="https://cdn.pydata.org/bokeh/release/bokeh-0.12.15.min.js"></script>
     <script src="https://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.15.min.js"></script>
     <script src="https://cdn.pydata.org/bokeh/release/bokeh-tables-0.12.15.min.js"></script>
